Initialize TodoList app.

--- a/spec/javascripts/fixtures/form-fixture.html
+++ b/spec/javascripts/fixtures/form-fixture.html
@@ -1,5 +1,6 @@
 <div id="form-fixture">
   <form action="">
     <input name="task[name]" val="Task name" />
+    <button class="submit">Add</button>
   </form>
 </div>
